@@ -1,16 +1,16 @@
 package org.cryptomator.jfuse.mac;
 
 import org.cryptomator.jfuse.api.Statvfs;
-import org.cryptomator.jfuse.mac.extr.statvfs;
+import org.cryptomator.jfuse.mac.extr.fuse.statvfs;
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
 
 record StatvfsImpl(MemorySegment segment) implements Statvfs {
 
 	private static final long MAX_UINT = 0xFFFFFFFFL;
 
-	public StatvfsImpl(MemorySegment address, SegmentScope scope) {
+	public StatvfsImpl(MemorySegment address, Arena scope) {
 		this(statvfs.ofAddress(address, scope));
 	}
 
